<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    class="pe.com.dms.movilasist.ui.fragment.recoveryPasword.RecoveryPasswordFragment"
    android:background="@color/colorCardLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/content_inset">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_header_recovery_password"
            android:textColor="@color/colorCardDark"
            android:textSize="@dimen/dynamic_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_correo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            android:hint="@string/correo_hint"
            android:textSize="@dimen/dynamic_body_text_size"
            app:layout_constraintBottom_toTopOf="@+id/container_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/content_inset"
                android:gravity="top|left"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="20"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/dynamic_body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_correo">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/content_inset"
                android:layout_marginEnd="@dimen/content_inset"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/button_send"
                android:textColor="@color/colorCardLight"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/content_inset"
                android:layout_marginEnd="@dimen/content_inset"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/button_cancel"
                android:textColor="@color/colorCardLight"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_send"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>